<resources>
    <string name="app_name">Visitka</string>
    <string name="open_map">Open map</string>
    <string name="doctors">Doctors</string>
    <string name="novikov_azamat">Novikov Azamat</string>
    <string name="nurmatov_zamir">Nurmatov Zamir</string>
    <string name="khalilova_munisa">Khalilova Munisa</string>
    <string name="alieva_adina">Alieva Adina</string>
    <string name="kolesova_viktoria">Kolesova Viktoria</string>
    <string name="adress">Shopping center Asia Mall \n1st floor</string>
    <string name="our_location">Our Location</string>
    <string name="save_contact">Save contact</string>
    <string name="telegram">Telegram</string>
    <string name="visit_website">Visit website</string>
    <string name="email_us">Email us</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="to_call">To call</string>
    <string name="your_friendly_dental_friend">Your friendly Dental Friend</string>
    <string name="dentist">Dentist</string>
    <string name="dr">Dr. %1$s</string>
    <string name="no_app">Не получается обработать намерение!</string>
    <string name="tel">tel:</string>
    <string name="phone_num">0 700 330 200</string>
    <string name="mailto">mailto:</string>
    <string name="gmail">dentistkg@gmail.com</string>
    <string name="google_link">http://maps.google.com/maps?q=loc:</string>
    <string name="dental_clinic">Dental clinic</string>
    <string name="google_maps_package">com.google.android.apps.maps</string>
    <string name="Novikov">Novikov</string>
    <string name="Nurmatov">Nurmatov</string>
    <string name="Khalilova">Khalilova</string>
    <string name="Alieva">Alieva</string>
    <string name="Kolesova">Kolesova</string>
</resources>