<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="0dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctors"
            android:textColor="@color/black"
            android:theme="@style/toolbar_style"/>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_1"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/app_color_purple_light"
        app:cardCornerRadius="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:fontFamily="@font/opensans_bold"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/novikov_azamat" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_2"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/app_color_purple_light"
        app:cardCornerRadius="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:fontFamily="@font/opensans_bold"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/nurmatov_zamir" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_3"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/app_color_purple_light"
        app:cardCornerRadius="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:fontFamily="@font/opensans_bold"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/khalilova_munisa" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_4"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/app_color_purple_light"
        app:cardCornerRadius="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:fontFamily="@font/jetbrains_mono"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/alieva_adina" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_5"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginTop="6dp"
        app:cardBackgroundColor="@color/app_color_purple_light"
        app:cardCornerRadius="2dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:fontFamily="@font/jetbrains_mono"
            android:textSize="15sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/kolesova_viktoria" />
    </androidx.cardview.widget.CardView>


</LinearLayout>