<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg_color"
    android:orientation="vertical"
    tools:context=".DetailActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:backgroundTint="@color/app_color_purple_dark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/image_card_view"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                app:cardCornerRadius="250dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_doctor"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:src="@drawable/photo2"
                    tools:ignore="ContentDescription"/>
            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/tv_doctors_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/opensans_bold"
                tools:text="Dr.Novikov"
                android:textColor="@color/white"
                android:textSize="27sp"
                app:layout_constraintBottom_toTopOf="@id/tv_doctors_txt"
                app:layout_constraintStart_toEndOf="@id/image_card_view"
                app:layout_constraintTop_toTopOf="@id/image_card_view" />

            <TextView
                android:id="@+id/tv_doctors_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/opensans_bold"
                android:text="@string/dentist"
                android:textColor="@color/white"
                android:textSize="23sp"
                app:layout_constraintBottom_toBottomOf="@id/image_card_view"
                app:layout_constraintStart_toEndOf="@id/image_card_view"
                app:layout_constraintTop_toBottomOf="@id/tv_doctors_surname" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"/>

        <ImageView
            android:id="@+id/logo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:src="@drawable/dental_clinic"
            app:layout_constraintBottom_toBottomOf="@id/logo_img"
            app:layout_constraintStart_toEndOf="@id/logo_img"
            tools:ignore="ContentDescription"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/opensans"
            android:text="@string/your_friendly_dental_friend"
            android:textColor="@color/app_color_purple_dark"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/logo_text"
            app:layout_constraintTop_toBottomOf="@id/logo_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:columnCount="3"
        android:rowCount="2">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:id="@+id/call_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_phone"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/opensans"
                    android:text="@string/to_call"
                    android:textColor="@color/app_text_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:id="@+id/whatsapp_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_whatsapp"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/whatsapp"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/opensans"
                    android:text="@string/whatsapp"
                    android:textColor="@color/app_text_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_mail"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/mail"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/opensans"
                    android:text="@string/email_us"
                    android:textColor="@color/app_text_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_website"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/web"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/opensans"
                    android:text="@string/visit_website"
                    android:textColor="@color/app_text_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_tg"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/tg"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/opensans"
                    android:text="@string/telegram"
                    android:textColor="@color/app_text_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp">

                <ImageView
                    android:id="@+id/img_contact"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_margin="6dp"
                    android:src="@drawable/vector"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:fontFamily="@font/opensans"
                    android:text="@string/save_contact"
                    android:textColor="@color/app_text_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/our_location"
        android:textSize="20sp"
        android:textColor="@color/app_text_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/opensans"
        android:text="@string/adress"
        android:textSize="18sp"
        android:textColor="@color/app_text_color" />

    <TextView
        android:id="@+id/open_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/opensans_bold"
        android:text="@string/open_map"
        android:textSize="18sp"
        android:textColor="@color/open_map_txt_color" />

    <View
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_marginStart="15dp"
        android:background="@color/black"/>
</LinearLayout>